samples/errors/super-ctor-without-base-class.fls
class SomeClass
    ctor(name) super(name)
        0
